Fri Jan 21 11:07:56 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/BMakeWorkspaceCreator.pm:

          Cosmetic changes.

        * modules/TemplateParser.pm:

          Provide new functionality for modifying lists within the context
          of 'foreach' and 'if' statments.  Four functions are provided:
          'multiple', 'reverse', 'sort', 'uniq'.

          'multiple' returns true if the parameter give has more than one
          element when evaluated in a list context.

          'reverse' returns the list in reverse order.

          'sort' returns the list in sorted order.

          'uniq' return the list in sorted order with duplicates removed.

        * modules/AutomakeProjectCreator.pm:

          Removed 'rev_requires' and 'rev_avoids' and used the new 'reverse'
          modifier.

        * templates/automake.mpd:

          Use the new modifiers provide by the TemplateParser.

Thu Jan 20 07:13:43 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * templates/automake.mpd:

          Changed to append <%pkgconfig_files%> to EXTRA_FILES.
          Changed to append to pkgconfigdata_DATA.

Wed Jan 19 11:20:42 2005  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:
        * modules/Creator.pm:
        * modules/Driver.pm:
        * modules/Options.pm:
        * modules/ProjectCreator.pm:
        * modules/WorkspaceCreator.pm:

          Split the functionality of -expand_env into two options, -use_env
          and -expand_vars.

          If the -use_env option is supplied to mwc.pl or mpc.pl, then MPC
          will use environment variable to replace $() instances instead of
          the values provided by -relative.

          If the -expand_vars option is used, then MPC will expand $()
          variables to the exact value as found in the environment or the
          -relative settings (depending on the use of the -use_env option).

          Also, the -relative option can now accept relative paths.
